welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:32: error: not found: value faire_linge
faire_linge()
^